# tts_app

./: .gitignore  README.md  audio_writer.py  chunking.py  config.py  main.py  models.py  pyproject.toml  services.py  tts_engine.py  utils.py  voice_registry.py
configs/: default.yaml
