[project]
name = "tts-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "omegaconf>=2.3.0",
    "pydantic>=2.0",
    "soundfile>=0.13.1",
    "torch>=2.5.1",
    "transformers==4.36.2",
    "tts>=0.22.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'win32'" },
]
